fix searchbar and navbar squishing upon resizing

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -195,7 +195,7 @@
   }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 920px) {
   .profile-page-top {
     margin-top: 120px;
     width: 100vw;
@@ -204,5 +204,6 @@
   .profile-nav-bar {
     flex-direction: column;
     align-items: center;
+    gap: 15px;
   }
 }
